# WisdomBetting

./: .gitignore  README.md  WisdomBetting.cabal  client_session_key.aes  stack.yaml  test.db3
src/: ApiFootball.hs  Database.hs  Main.hs
