name:                WisdomBetting
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/WisdomBetting#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable WisdomBetting
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Database ,
                       ApiFootball
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5 ,
                       yesod , 
                       persistent ,
                       persistent-sqlite ,
                       transformers ,
                       resourcet ,
                       monad-logger ,
                       time ,
                       text ,
                       http-conduit ,
                       bytestring ,
                       aeson ,
                       aeson-schemas ,
                       mtl ,
                       persistent-template ,
                       concurrent-extra ,
                       unbounded-delays ,
                       containers
